--- a/1.html
+++ b/1.html
@@ -68,5 +68,9 @@ window.WBComment.init({
     "id": "WBCommentFrame"
 });
 </script>
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1947346"></script>
+<!-- UY END -->
   </body>
 </html>
