--- a/2.html
+++ b/2.html
@@ -1,4 +1,5 @@
 <form action="http://m.cps.com.cn/data.php" method="post">
 <input name="entityId" value="85" />
-<input tye="submit">提交</input>
+<input type="submit"/>
 </form>
+
