--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<meta name="ujianVerification" content="d19c8571fe340b2bf3d4722986b0eadd" />
+</head>
 <body>
 <h1>PlayInLife</h1>
 <p>I'm hosted with GitHub Pages.</p>
