--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
 <h1>PlayInLife</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<p>How to start a startup</p>
 <div id="disqus_thread"></div>
 <script type="text/javascript">
 	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
